--- a/index.html
+++ b/index.html
@@ -1,60 +1,78 @@
 <!DOCTYPE html>
 <html lang="en-GB">
+
 <head>
-    <title>sinister.codes</title>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="sinister, sina, sinner, sinnayuh, root, ssh, admin, nanocores, csgo, valorant, cod, warzone, sys, reign, minecraft, valorant, carding, clones, paypal, fraud, demon, hvh, gamesense, skeet, neverlose, primordial">
-    <meta name="author" content="sinner">
-    <meta name="theme-color" content="#fc9a9a">
-    <meta property="og:url" content="https://sinister.codes">
-    <meta property="og:title" content="sinister.codes">
-    <meta property="og:description" content="Don’t try to fit in. You were born to stand out.">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://sinister.codes/asset/discord/bg.gif"/>
-    <meta name="theme-color" data-react-helmet="true" content="#fc9a9a">
-    <meta itemprop="image" content="asset/fav/icon.gif" />
-    <link rel="shortcut icon" href="asset/fav/icon.gif" type="image/x-icon" />
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@nanocores">
-    <meta name="twitter:title" content="sinner">
-    <meta name="twitter:description" content="description">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link type="text/css" href="css/style.css" rel="stylesheet"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="js/type.js"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/block.js"></script>
-    <script src="js/title.js"></script>
+  <title>sinister.codes</title>
+  <meta charset="UTF-8">
+  <meta name="keywords" content="sinister, sina, sinner, sinnayuh, root, ssh, admin, nanocores, csgo, valorant, cod, warzone, sys, reign, minecraft, valorant, carding, clones, paypal, fraud, demon, hvh, gamesense, skeet, neverlose, primordial">
+  <meta name="author" content="sinner">
+  <meta name="theme-color" content="#fc9a9a">
+  <meta property="og:url" content="https://sinister.codes">
+  <meta property="og:title" content="sinister.codes">
+  <meta property="og:description" content="Don’t try to fit in. You were born to stand out.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://sinister.codes/asset/discord/bg.gif"/>
+  <meta name="theme-color" data-react-helmet="true" content="#fc9a9a">
+  <meta itemprop="image" content="asset/fav/icon.gif" />
+  <link rel="shortcut icon" href="asset/fav/icon.gif" type="image/x-icon" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@nanocores">
+  <meta name="twitter:title" content="sinner">
+  <meta name="twitter:description" content="description">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link type="text/css" href="css/style.css" rel="stylesheet"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <script src="js/core.js"></script>
+  <script src="js/type.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/block.js"></script>
+  <script src="js/title.js"></script>
 </head>
-<body ondragstart="return false;">
-    <div id="landing">
-        <p onclick="enter_website();">click</p>
-    </div>
 
-    <div id="music-control" class="hidden">
-      <audio id="music" src="asset/background/sina.mp3" loop></audio>
-    </div>
+<body>
+  <style>
+    html, body {margin: 0; height: 100%; overflow: hidden}
+  </style>
+  <div class="overlay_part" id="particles-js"></div>
+  <div id="landing">
+    <p onclick="enter_website();" style="z-index:2; 
+          transition: 0.5s;">click</p>
+  </div>
+  </div>
 
-    <div id="content" class="hidden">
-      <div id="video-overlay"></div>
-      <div id="pattern"></div>
-      <video id="video-control" loop autoplay webkit-playsinline playsinline>
-        <source id="video" src="asset/background/sina.mp4" type="video/mp4">
-      </video>
+  <div id="music-control" class="hidden">
+    <audio id="music" src="" loop></audio>
+  </div>
 
-      <div style="display: flex; flex-direction: column; z-index: 999; justify-content: center; align-items: center;">
-        <p class="title" onclick="">sinister</p>
-        <p class="description" onclick="open_server()">discord.gg/sina</p>
-        <p class="typewriter" id="Typewriter"><span class="Typewriter__wrapper"></span><span class="Typewriter__cursor">|</span></p>
-        <div style="display: flex; flex-direction: row;">
-          <p class="link" style="padding-right: 5px" onclick="open_steam()">[steam-group]</p>
-          <p id="discord" class="link" style="padding-left: 5px; padding-right: 5px" onclick="copy_discord()">[discord]</p>
-          <p class="link" style="padding-left: 5px;" onclick="open_api()">[image-api]</p>
-        </div>
+  <div id="content" class="hidden">
+    <div id="video-overlay"></div>
+    <div id="pattern"></div>
+    <video id="video-control" loop autoplay webkit-playsinline playsinline>
+      <source id="video" src="asset/background/nitro.mp3" type="video/mp4">
+    </video>
+
+    <div style="display: flex; flex-direction: column; z-index: 999; justify-content: center; align-items: center;">
+      <p class="title" style="transition: 0.5s;" onclick="">sina</p>
+      <p class="description" style="transition: 0.5s;" onclick="open_server()">discord.gg/sina</p>
+      <p class="typewriter" style="transition: 0.5s;" id="Typewriter"><span class="Typewriter__wrapper"></span><span
+          class="Typewriter__cursor">|</span></p>
+      <div style="display: flex; flex-direction: row;">
+        <p id="tele" class="link" style="padding-right: 5px; transition: 0.5s;" onclick="copy_tele()">[telegram]</p>
+        <p class="link" style="padding-left: 5px; padding-right: 5px" onclick="open_status()">[status]</p>
+        <p id="discord" class="link" style="padding-left: 5px; transition: 0.5s;" onclick="copy_discord()">[discord]</p>
       </div>
     </div>
+  </div>
+
+  <script> 
+  window.addEventListener("scroll", function(event) {
+  window.scrollTo(0,0);
+                                               });
+                                               </script>
+  <script src="js/particles.js"></script>
+  <script src="js/app.js"></script>
 </body>
+
 </html>
